k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: amastan
  labels:
    name: amastan
    app: fraud-shield-guard
    environment: production
